--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-textarea-autosize": "^8.3.3",
+    "sass": "^1.49.7",
+    "use-immer": "^0.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
